refactor: MusicaControladorTest refatorado